@@ -6,3 +6,5 @@ Eduard Bloch <edi@gmx.de> - Debian maintainer since 2003.
 
 Jan Metz <metz@jamecs.de> - supplied RH8 box and SL45i, ObexFTP info page
 
+Carsten Pfeiffer <carpdjih@mailbox.tu-berlin.de> - coded a kio slave
+
